2013-12-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac, .gitignore: Added configure option --enable-gcov to
	  enable gcov code coverage.

2013-11-12 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added fingerprint for Cisco IOS 15.0.

2013-11-02 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.1: Added new --plain (-x) option to supress
	  printing of header and footer text, and only display one output
	  line for each responding host. Idea from Stefan Tomanek's arp-scan
	  fork on github at https://github.com/wertarbyte/arp-scan.

2013-09-21 Roy Hills <Roy.Hills@nta-monitor.com>

	* get-oui, get-iab: Use LWP::UserAgent instead of LWP::Simple to enable
	  us to obtain the raw content rather than the decoded content. This
	  avoids Unicode/UTF-8 issues caused by a change in behaviour between
	  LWP 5.813 on Debian Lenny and 5.836 on Debian Squeeze.

	* ieee-oui.txt, ieee-iab.txt: Updated from IEEE website using modified
	  scripts.

2013-09-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added fingerprint for WIZnet W5100 on Arduino
	  Ethernet shield.

2013-09-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Change the bug-report string in AC_INIT from the
	  arp-scan email address to the github URL.

	* Added references to the github repository in various files in
	  place of the arp-scan email address.

	* Updated ieee-oui.txt and ieee-iab.txt files.

2013-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* Removed $Id$ keywords from all files, and associated rcsid variables
	  from C source. These are not really needed and they don't work with
	  git.

	* check-run1: Added GPL licence text, which had been accidentally
	  ommitted when the script was written.

	* configure.ac: Incremented version to 1.9.2 to distinguish new
	  version under git revision control.

	* .gitignore: new file containing file patterns that should not be
	  committed to the repository.
